added back support lis 3.2 release